#
# K2HASH
#
# Copyright 2013 Yahoo! JAPAN corporation.
#
# K2HASH is key-valuew store base libraries.
# K2HASH is made for the purpose of the construction of
# original KVS system and the offer of the library.
# The characteristic is this KVS library which Key can
# layer. And can support multi-processing and multi-thread,
# and is provided safely as available KVS.
#
# For the full copyright and license information, please view
# the LICENSE file that was distributed with this source code.
#
# AUTHOR:   Takeshi Nakatani
# CREATE:   Fri Dec 2 2013
# REVISION:
#

AUTOMAKE_OPTIONS = foreign no-dependencies

man_MANS = k2hash.1 k2hcompress.1 k2hedit.1 k2hlinetool.1 k2hreplace.1 k2htouch.1 k2himport.1 k2hbench.1

SUBDIRS = examples

EXTRA_DIST = $(man_MANS)

#
# VIM modelines
#
# vim:set ts=4 fenc=utf-8:
#
